// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppConsents should match snapshot where the app is loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-loader-container"
    >
      <div
        class="el-loader"
      >
        <div
          class="el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppConsents should match snapshot where there are no consents returned 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppConsents should match snapshot with consents 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <h1
        class="el-title"
      >
         Consents
      </h1>
      <div
        class="el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="5"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Client
          </div>
          <div
            class="el-table-header"
          >
            Email
          </div>
          <div
            class="el-table-header"
          >
            Date Sent
          </div>
          <div
            class="el-table-header"
          >
            Status
          </div>
          <div
            class="el-table-header"
          >
            Date Accepted
          </div>
          <div
            class="el-table-header"
          >
            Resend Email
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 20H11V4H20V16.264V20Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                    fill="#F3FFFB"
                  />
                  <path
                    d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                    fill="#23A4DE"
                  />
                </svg>
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Client"
              />
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Email"
              >
                example@mail.com
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Sent"
              >
                13/06/2022 15:39
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Status"
              >
                Pending
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Accepted"
              >
                13/06/2022 15:39
              </div>
            </div>
            <div
              class="el-table-cta-cell"
            >
              <div
                class="el-table-cta-icon-container"
              >
                <span
                  class="el-intent-primary el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M18.125 2.5H1.87501C0.841067 2.5 0 3.34107 0 4.37501V15.625C0 16.659 0.841067 17.5 1.87501 17.5H18.125C19.1589 17.5 20 16.659 20 15.625V4.37501C20 3.34107 19.1589 2.5 18.125 2.5ZM18.125 3.74999C18.2099 3.74999 18.2907 3.76761 18.3645 3.79838L10 11.048L1.63542 3.79838C1.70927 3.76765 1.79005 3.74999 1.87497 3.74999H18.125ZM18.125 16.25H1.87501C1.53017 16.25 1.24999 15.9698 1.24999 15.625V5.11901L9.59045 12.3474C9.70826 12.4493 9.85413 12.5 10 12.5C10.1459 12.5 10.2917 12.4494 10.4096 12.3474L18.75 5.11901V15.625C18.75 15.9698 18.4698 16.25 18.125 16.25Z"
                        fill="currentColor"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0"
                      >
                        <rect
                          fill="white"
                          height="1em"
                          width="1em"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h1
      class="el-title"
    >
       Consents
    </h1>
    <div
      class="el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="5"
    >
      <div
        class="el-table-headers-row"
      >
        <div
          class="el-table-header"
        >
          Client
        </div>
        <div
          class="el-table-header"
        >
          Email
        </div>
        <div
          class="el-table-header"
        >
          Date Sent
        </div>
        <div
          class="el-table-header"
        >
          Status
        </div>
        <div
          class="el-table-header"
        >
          Date Accepted
        </div>
        <div
          class="el-table-header"
        >
          Resend Email
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 20H11V4H20V16.264V20Z"
                  fill="#7BC9EB"
                />
                <path
                  d="M13 2H11.3572L10 9.05535L11.3574 20H13V2Z"
                  fill="#0061A8"
                />
                <path
                  d="M1.27977 0V1.78715H0V20H12V0H1.27977Z"
                  fill="#23A4DE"
                />
                <path
                  d="M3.61719 4.50488H5.14902V6.38001H3.61719V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 4.50488H8.96188V6.38001H7.43005V4.50488Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 8.25513H5.14902V10.1303H3.61719V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 8.25513H8.96188V10.1303H7.43005V8.25513Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 12.0056H5.14902V13.8807H3.61719V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 12.0056H8.96188V13.8807H7.43005V12.0056Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M3.61719 15.7559H5.14902V17.631H3.61719V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M7.43005 15.7559H8.96188V17.631H7.43005V15.7559Z"
                  fill="#F3FFFB"
                />
                <path
                  d="M14.7491 8.25513H16.281V10.1303H14.7491V8.25513Z"
                  fill="#23A4DE"
                />
                <path
                  d="M14.7491 12.0056H16.281V13.8807H14.7491V12.0056Z"
                  fill="#23A4DE"
                />
              </svg>
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="Client"
            />
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Email"
            >
              example@mail.com
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Sent"
            >
              13/06/2022 15:39
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Status"
            >
              Pending
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Accepted"
            >
              13/06/2022 15:39
            </div>
          </div>
          <div
            class="el-table-cta-cell"
          >
            <div
              class="el-table-cta-icon-container"
            >
              <span
                class="el-intent-primary el-icon"
                style="font-size: 1.2rem;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M18.125 2.5H1.87501C0.841067 2.5 0 3.34107 0 4.37501V15.625C0 16.659 0.841067 17.5 1.87501 17.5H18.125C19.1589 17.5 20 16.659 20 15.625V4.37501C20 3.34107 19.1589 2.5 18.125 2.5ZM18.125 3.74999C18.2099 3.74999 18.2907 3.76761 18.3645 3.79838L10 11.048L1.63542 3.79838C1.70927 3.76765 1.79005 3.74999 1.87497 3.74999H18.125ZM18.125 16.25H1.87501C1.53017 16.25 1.24999 15.9698 1.24999 15.625V5.11901L9.59045 12.3474C9.70826 12.4493 9.85413 12.5 10 12.5C10.1459 12.5 10.2917 12.4494 10.4096 12.3474L18.75 5.11901V15.625C18.75 15.9698 18.4698 16.25 18.125 16.25Z"
                      fill="currentColor"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="clip0"
                    >
                      <rect
                        fill="white"
                        height="1em"
                        width="1em"
                      />
                    </clippath>
                  </defs>
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
